kubernetes/php/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: laravel-k8s-tf-eks
  name: php
spec:
  selector:
    app: php
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
